# cin-xml-from-csv

./: .gitignore  LICENSE  README.md  pyproject.toml
src/cin_xml_from_csv/: generate_csvs.py  generate_xml.py  main.py
